# webrtc

./: BUILD.gn
photon/: BUILD.gn  capture_thread.cc  capture_thread.h  capturer.cc  capturer.h  conductor.cc  conductor.h  data_socket.cc  data_socket.h  defaults.cc  defaults.h  input_manager.cc  input_manager.h  main.cc  utils.cc
photon/client/static/: app.js  index.html  lib.js
photon/client/static/js/: app.js
photon/http/server/: connection.cc  connection.h  connection_manager.cc  connection_manager.h  header.h  reply.cc  reply.h  request.h  request_handler.h  request_parser.cc  request_parser.h  response.cc  response.h  server.cc  server.h
